--- a/.github/workflows/html_css_lint.yml
+++ b/.github/workflows/html_css_lint.yml
@@ -27,5 +27,20 @@ jobs:
       - name: Run HTML lint
         run: npx linthtml  "**/*.html"
 
-      - name: Run Stylelint
-        run: npx stylelint "**/*.css"
+  stylelint:
+     runs-on: ubuntu-latest
+     
+     steps:
+       - name: Checkout code
+         uses: actions/checkout@v2
+
+       - name: Set up Node.js
+         uses: actions/setup-node@v2
+         with:
+          node-version: '20'
+          
+       - name: Install dependencies
+         run: npm install
+        
+       - name: Run Stylelint
+         run: npx stylelint "**/*.css"
